--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,8 +1,25 @@
-<mat-grid-list cols="" 1>
+<mat-grid-list cols="1">
     <mat-grid-tile>
-        <button mat-raised-button>
-            Login
-        </button>
+        <mat-card>
+            <mat-card-title>Welcome to countries</mat-card-title>
+            <mat-card-subtitle>Please login</mat-card-subtitle>
+
+            <mat-form-field appearance="fill">
+                <mat-label>Enter your email</mat-label>
+                <input matInput placeholder="pat@example.com" [formControl]="email" required>
+                <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+            </mat-form-field>
+
+
+
+
+
+
+
+            <button mat-raised-button>
+                Login
+            </button>
+        </mat-card>
     </mat-grid-tile>
 
 </mat-grid-list>
