--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -24,6 +24,7 @@
         <button class="submit" mat-raised-button (click)="login()">
             Login
         </button>
+        <div *ngIf="errorExists">Error en el login</div>
     </mat-card>
 
 </div>
