--- a/src/app/countries/components/countries-list/countries-list.component.html
+++ b/src/app/countries/components/countries-list/countries-list.component.html
@@ -1,9 +1,7 @@
 <mat-grid-list class="cards-container" cols="3" rowHeight="420px">
+  <mat-spinner *ngIf="loader" class="cards-container__spinner"></mat-spinner>
+  <mat-grid-tile *ngFor="let country of countries">
+    <app-country-card [country]="country"></app-country-card>
+  </mat-grid-tile>
 
-    <mat-grid-tile *ngFor="let country of countries">
-      <app-country-card  
-      [country]="country"
-      ></app-country-card>
-    </mat-grid-tile>
-  
-  </mat-grid-list>
+</mat-grid-list>
