--- a/src/app/countries/components/countries-list/countries-list.component.html
+++ b/src/app/countries/components/countries-list/countries-list.component.html
@@ -1,7 +1,51 @@
-<mat-grid-list class="cards-container" cols="3" rowHeight="420px">
-  <mat-spinner *ngIf="loader" class="cards-container__spinner"></mat-spinner>
-  <mat-grid-tile *ngFor="let country of countries">
-    <app-country-card [country]="country"></app-country-card>
-  </mat-grid-tile>
+<mat-tab-group>
+  <mat-tab label="Cards">
+    <mat-grid-list class="cards-container" cols="3" rowHeight="420px">
+      <mat-spinner *ngIf="loader" class="cards-container__spinner"></mat-spinner>
+      <mat-grid-tile *ngFor="let country of countries">
+        <app-country-card [country]="country"></app-country-card>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </mat-tab>
+  <mat-tab label="Table">
 
-</mat-grid-list>
+
+    <table mat-table [dataSource]="countries" class="mat-elevation-z8">
+
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+
+      <!-- Position Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name.common}} </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="capital">
+        <th mat-header-cell *matHeaderCellDef> Capital </th>
+        <td mat-cell *matCellDef="let element"> {{element.capital}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="region">
+        <th mat-header-cell *matHeaderCellDef> Region </th>
+        <td mat-cell *matCellDef="let element"> {{element.region}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="languages">
+        <th mat-header-cell *matHeaderCellDef> Language </th>
+        <td mat-cell *matCellDef="let element"> {{getValuesFromObject(element.languages)}} </td>
+      </ng-container>
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+
+
+
+
+  </mat-tab>
+  <mat-tab label="Third"></mat-tab>
+</mat-tab-group>
